Bug 1361499 - Initialize nsIFrame::mState in the ctor to avoid Coverity warnings.  r=jfkthame

MozReview-Commit-ID: 8ly3NZMbuQ8